--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,11 @@ pom.xml.asc
 /classes/
 /target/
 /checkouts/
-.lein-deps-sum
-.lein-repl-history
-.lein-plugins/
-.lein-failures
+/node_modules/
+/resources/static/js/
+.DS_Store
+.lein-*
 .nrepl-port
 .cpcache/
+.shadow-cljs/
+.idea/
